<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/main_margin"
    tools:context=".EditInventoryActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />


        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Product Name field -->
            <EditText
                android:id="@+id/product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Product Quantity field -->
            <EditText
                android:id="@+id/product_quantity"
                android:hint="@string/hint_quantity"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Product Price field -->
            <EditText
                android:id="@+id/product_price"
                android:hint="@string/hint_product_price"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Product Supplier Name -->
            <EditText
                android:id="@+id/product_supplier"
                android:hint="@string/hint_supplier"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Product Supplier Phone -->
            <EditText
                android:id="@+id/supplier_phone"
                android:hint="@string/hint_phone"
                style="@style/EditorFieldStyle" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
